--- a/a-propos.html
+++ b/a-propos.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/cursor/cursor-pink.png">
     <title>À propos</title>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header"> 
-        <h1>Garance Anglio</h1>
+        <h1><a href="index.html">Garance Anglio </a></h1>
          <a href="index.html">Projets </a>
          <a href="a-propos.html">À propos</a>
          <a href="contact.html">Contact</a>
@@ -18,13 +19,13 @@
     <div class="a-propos">
             <div>
             <div class="a-propos-texte">
-            Je suis une étudiante en DNMADe Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e et je cherche un stage étudiant de 2 à 3 mois entre le 9 mai et le 26 juillet 2023.</div>
-            <div class="a-propos-texte">
+            Je suis étudiante en DNMADE Graphisme - Image de Communication à l'ELMAD Auguste Renoir Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e et je cherche un stage étudiant de 2 à 3 mois entre le 9 mai et le 26 juillet 2023.</div>
+            <div class="a-propos-texte-titre">
             → Si mes projets vous intéressent, vous pouvez me contacter via mon mail : garance.anglio@orange.fr</div>
             </div>
 
             <div>
-                <div class="a-propos-texte">
+                <div class="a-propos-texte-titre">
                 Ma formation :</div>
                 <div class="a-propos-texte">
                 → Depuis 2021 : <br>DNMADE Graphisme - Image de communication - ELMAD Auguste Renoir - Paris 18e
@@ -35,8 +36,8 @@
             </div>
 
             <div>
-                <div class="a-propos-texte">
-                Éxpérience</div>
+                <div class="a-propos-texte-titre">
+                Mes expériences</div>
                 <div class="a-propos-texte">
                 → Janvier 2023 : <br>Workshop motion design sur After Effects avec Melody DaFonseca 
                 </div>
@@ -59,7 +60,7 @@
             </div>
 
             <div>
-                <div class="a-propos-texte">
+                <div class="a-propos-texte-titre">
                 Mes compétences</div>
                 <div class="a-propos-texte">
                 → Logiciels : <br>Suite Adobe : Indesign Photoshop Illustrator (Bonne maîtrise) <br> Programmation : HTML & CSS, After Effects, Premiere Pro et Glyphs (En apprentissage)
@@ -78,7 +79,7 @@
             </div>
             
             <div>
-                <div class="a-propos-texte">
+                <div class="a-propos-texte-titre">
                 Mes centres d'intérêt</div>
                 <div class="a-propos-texte">
                 → Photographie argentique <br> → Mode et couture <br> → Musique <br> → Expositions
@@ -87,5 +88,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer">
+           <div class="footer-text"> <marquee Scrollamount=8> Site internet codé par mes soins en 2023 &#124; Typeface : New Reason par Newlyn Foundry</marquee></div>
+        </div>
+   </footer>
 </body>
 </html>
