--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/cursor/cursor-pink.png">
     <title>Contact</title><head>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
     <link rel="stylesheet" href="style.css">
@@ -11,15 +12,17 @@
 </head>
 <body>
     <header class="header"> 
-        <h1>Garance Anglio</h1>
+        <h1><a href="index.html">Garance Anglio </a></h1>
          <a href="index.html">Projets </a>
          <a href="a-propos.html">À propos</a>
          <a href="contact.html">Contact</a>
      </header>
-        <div class="paragraphe-grand">Pour me prendre en stage et/ou écouter du Céline Dion ensemble :) <br> →garance.anglio@orange.fr</div>
+     <div class="page-contact">
+            <div class="paragraphe-grand">Pour me prendre en stage et/ou écouter du Céline Dion ensemble :) <br>→&nbsp;garance.anglio@orange.fr</div>
+    </div>
     <footer>
          <div class="footer">
-            <div class="footer-text"> J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore. </div>
+            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore.</marquee></div>
          </div>
     </footer>
 </body>
