--- a/dessins.html
+++ b/dessins.html
@@ -19,16 +19,14 @@
 
     <div class="page-projets">
         <div class="texte-projets">
-            <div class="titre-projet">Le pli de la mémoire</div>
-            <div class="explication-projet"> Ce projet traite de l’oubli des souvenirs familiaux à travers les plis.</div>
-            <div class="explication-projet">Comment le pli peut il altérer une image ? Comme un souvenir, elle est déconstruite, puis reconstuite, et vice-versa.</div>
-            <div class="explication-projet">→Mon intention était de jouer avec le format traditionnel des photos imprimées : le 10x15cm. Les images mélangées sont comme un extrait de notre mémoire, altérée avec le temps.</div>
-            
+            <div class="titre-projet">Dessins</div>
+            <div class="explication-projet"> Collages, dessins, croquis divers</div> 
+            <div class="explication-projet"><a href="https://youtu.be/U7Ex7Nz-UFI"> Lien vers une courte animation réalisée en broderie et en peinture sur tissu </a></div>
         </div>
  
         <div class="page-projets-img">
-            <img src="images/pli/pli_planche.jpg" alt="planche-pli">
+            <img src="images/dessins_expe/dessins_planche.jpg" alt="dessins-planche">
         </div>
       </div>
       </body>
-      </html>     
+      </html>   
