--- a/photographies.html
+++ b/photographies.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/cursor/cursor-pink.png">
     <title>Garance Anglio</title>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header"> 
-       <h1>Garance Anglio</h1>
+        <h1><a href="index.html">Garance Anglio </a></h1>
         <a href="index.html">Projets </a>
         <a href="a-propos.html">À propos</a>
         <a href="contact.html">Contact</a>
@@ -19,11 +20,11 @@
     <div class="page-projets">
         <div class="texte-projets">
             <div class="titre-projet"> Photographies</div>
-            <div class="explication-projet"> Ma pratique photographique est spontanée. Je me concentre surtout sur le paysage, à la recherche de jeux de lumières et de textures.</div>
+            <div class="explication-projet"> Ma pratique photographique (argentique et numérique) est spontanée. Je me concentre surtout sur le paysage, à la recherche de jeux de lumières et de textures.</div>
         </div>
  
         <div class="page-projets-img">
-            <img src="images/photo/photo_planche.jpg" alt="insectes_couverture1">
+            <img src="images/photo/photo_planche.jpg" alt="photo-planches">
         </div>
       </div>
       </body>
