--- a/serigraphie-holistique.html
+++ b/serigraphie-holistique.html
@@ -19,16 +19,14 @@
 
     <div class="page-projets">
         <div class="texte-projets">
-            <div class="titre-projet">Le pli de la mémoire</div>
-            <div class="explication-projet"> Ce projet traite de l’oubli des souvenirs familiaux à travers les plis.</div>
-            <div class="explication-projet">Comment le pli peut il altérer une image ? Comme un souvenir, elle est déconstruite, puis reconstuite, et vice-versa.</div>
-            <div class="explication-projet">→Mon intention était de jouer avec le format traditionnel des photos imprimées : le 10x15cm. Les images mélangées sont comme un extrait de notre mémoire, altérée avec le temps.</div>
-            
+            <div class="titre-projet">Fabrication et sérigraphie d'encres naturelles</div>
+            <div class="explication-projet"> Durant un workshop avec Romain Gauthier de Ro Studio, j’ai appris à fabriquer des encres à base de produits naturels (garance, spiruline, curry, farine...)</div>
+            <div class="explication-projet">→ La finalité a pris la forme d’un dépliant d’une exposition ayant eu lieu dans mon école sur le thème des vacances d’été. </div>
         </div>
  
         <div class="page-projets-img">
-            <img src="images/pli/pli_planche.jpg" alt="planche-pli">
+            <img src="images/rostudio/rostudio_planche.jpg" alt="planche-serigraphie-rostudio">
         </div>
       </div>
       </body>
-      </html>     
+      </html>  
