--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Étudiante en design graphique à Paris.">
+    <link rel="icon" type="image/png" href="images/cursor/cursor-pink.png">
     <title>Garance Anglio</title>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header"> 
-       <h1>Garance Anglio</h1>
+       <h1><a href="index.html">Garance Anglio </a></h1>
         <a href="index.html">Projets </a>
         <a href="a-propos.html">À propos</a>
         <a href="contact.html">Contact</a>
@@ -22,35 +23,35 @@
              Délicats insectes — Édition
         </a>
         <a href="la-villette.html">
-             <img src="images/lavillette/redimension/lavillette_mockup_affiche_vignette_v2.jpg" alt="lavillette-dépliant-vignette">
+             <img src="images/lavillette/redimension/lavillette_mockup_affiche_vignette_v2.jpg" alt="lavillette-affiche-vignette">
              Cinéma en plein air de la Villette — Identité
         </a>
         <a href="paris-dechets.html">
-             <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="insectes_poster">
+             <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
              Paris Déchets — Message
         </a>
         <a href="apha-conseil.html">
-             <img src="images/apha_conseil/redimension/aphaconseil_formation_mockup_vignette.jpg" alt="insectes_poster">
+             <img src="images/apha_conseil/redimension/aphaconseil_formation_mockup_vignette.jpg" alt="aphaconeil-a4-formation">
              APHA Conseil — Identité
         </a>
         <a href="insectes-a-table.html">
-             <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes_poster">
+             <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes-a-table-mockup-farine">
              Insectes à table ! — Identité
         </a>
         <a href="photographies.html">
-             <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="insectes_poster">
+             <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
              Photographies
         </a>
         <a href="pli.html">
-             <img src="images/pli/redimension/pli_objet1_vignette.jpg" alt="insectes_poster">
+             <img src="images/pli/redimension/pli_objet1_vignette.jpg" alt="pli-de-la-memoire">
              Le pli de la mémoire - Projet Plastique
         </a>
         <a href="dessins.html">
-             <img src="images/dessins_expe/redimension/dessins_photonbcrayons_vignette.jpg" alt="insectes_poster">
+             <img src="images/dessins_expe/redimension/dessins_photonbcrayons_vignette.jpg" alt="dessin-sur-photo">
              Dessins, Éxperimentations et Collages
         </a>
         <a href="serigraphie-holistique.html">
-          <img src="images/rostudio/redimension/rostudio_serigraphie_recto_vignette.jpg" alt="insectes_poster">
+          <img src="images/rostudio/redimension/rostudio_serigraphie_recto_vignette.jpg" alt="depliant-serigraphie-rostudio">
           Fabrication et sérigraphie d'encres naturelles
      </a>
         <!-- <a href="programmation-p5js.html">
