--- a/a-propos.html
+++ b/a-propos.html
@@ -19,7 +19,7 @@
     <div class="a-propos">
             <div>
             <div class="a-propos-texte">
-            Je suis étudiante en DNMADE Graphisme - Image de Communication à l'ELMAD Auguste Renoir Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e et je cherche un stage étudiant de 2 à 3 mois entre le 9 mai et le 26 juillet 2023.</div>
+            Je suis étudiante en DNMADE Graphisme - Image de Communication à l'ELMAD Auguste Renoir Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e. <br> Je recherche un stage étudiant de 2 à 3 mois entre le 9 mai et le 26 juillet 2023.</div>
             <div class="a-propos-texte-titre">
             → Si mes projets vous intéressent, vous pouvez me contacter via mon mail : garance.anglio@orange.fr</div>
             </div>
