--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </div>
     <footer>
          <div class="footer">
-            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. Je te jetterai des soooooorts pour qu'on me prenne encoooooore.</marquee></div>
+            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. &#124; J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes.</marquee></div>
          </div>
     </footer>
 </body>
