--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </div>
     <footer>
          <div class="footer">
-            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. &#124; Je voudrais décrocher la luuuune, je voudrais même sauver la Teeeerre, mais avant tout, je voudrais trouver un staaaage.&#124; Encore un staaaaage, encore une heure, encore une laaaarme de bonheur.</marquee></div>
+            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. &#124; Je voudrais décrocher la luuuune, je voudrais même sauver la Teeeerre, mais avant tout, je voudrais trouver un staaaage. &#124; Encore un staaaaage, encore une heure, encore une laaaarme de bonheur...</marquee></div>
          </div>
     </footer>
 </body>
