--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header class="header"> 
         <h1><a href="index.html">Garance Anglio </a></h1>
          <a href="index.html">Projets </a>
-         <a href="a-propos.html">À propos</a>
+         <a href="a-propos.html">À&nbsp;propos</a>
          <a href="contact.html">Contact</a>
      </header>
      <div class="page-contact">
