--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <img src="images/lavillette/redimension/lavillette_mockup_affiche_vignette_v2.jpg" alt="lavillette-affiche-vignette">
              Cinéma en plein air de la Villette — Identité
         </a>
-        <a href="chloredécone-serigraphie.html">
+        <a href="chloredecone-serigraphie.html">
           <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
           Aux trames aux citoyens — Édition
           </a>
