--- a/a-propos.html
+++ b/a-propos.html
@@ -55,7 +55,7 @@
                     → Juin 2022 : <br>Paris Print Club - Stage d’observation en sérigraphie auprès de French Fourch 
                 </div>
                 <div class="a-propos-texte">
-                    → Mai 2022 : <br>Workshop typographie animée - Hugo Jourdan 
+                    → Mai 2022 : <br>Workshop typographie animée avec Hugo Jourdan 
                 </div>
             </div>
 
