--- a/index.html
+++ b/index.html
@@ -18,46 +18,43 @@
         <a href="contact.html">Contact</a>
     </header>
     <div class="vignettes-home">
-        <a href="delicats-insectes.html">
+          <a href="delicats-insectes.html">
              <img src="images/insectes/redimensions/insectes_poster_vignette.jpg" alt="insectes_poster">
-             Délicats insectes — Édition
-        </a>
-        <a href="la-villette.html">
+               Délicats insectes — Édition</a>
+          <a href="la-villette.html">
              <img src="images/lavillette/redimension/lavillette_mockup_affiche_vignette_v2.jpg" alt="lavillette-affiche-vignette">
-             Cinéma en plein air de la Villette — Identité
-        </a>
-        <a href="chloredecone-serigraphie.html">
-          <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
-          Aux trames aux citoyens — Édition
-          </a>
-        <a href="paris-dechets.html">
-             <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
-             Paris Déchets — Message
-        </a>
-        <a href="photographies.html">
-          <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
-          Photographies
-          </a>
-        <a href="insectes-a-table.html">
+               Cinéma en plein air de la Villette — Identité</a>
+           <a href="chloredecone-serigraphie.html">
+               <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
+                Aux trames aux citoyens — Édition </a>
+          <a href="paris-dechets.html">
+               <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
+               Paris Déchets — Message</a>
+          <a href="photographies.html">
+                    <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
+               Photographies</a>
+          <a href="basset-hound.html">
+                    <img src="images/basset_hound/redimension/vignette_bassethound.jpg" alt="basset-hound-vignette">
+               Basset Hound — Typographie</a>
+          <a href="insectes-a-table.html">
              <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes-a-table-mockup-farine">
-             Insectes à table ! — Identité
-        </a>
-        <a href="apha-conseil.html">
+               Insectes à table ! — Identité</a>
+          <a href="cnam.html">
+               <img src="images/cnam/redimension/vignette_cnam.jpg" alt="cnam-vignette">
+               Musée des Arts et Métiers — Didactive Visuelle</a>
+          <a href="apha-conseil.html">
           <img src="images/apha_conseil/redimension/aphaconseil_formation_mockup_vignette.jpg" alt="aphaconeil-a4-formation">
-          APHA Conseil — Identité
-          </a>
-        <a href="pli.html">
+               APHA Conseil — Identité</a>
+          <a href="pli.html">
              <img src="images/pli/redimension/pli_objet1_vignette.jpg" alt="pli-de-la-memoire">
-             Le pli de la mémoire - Projet Plastique
-        </a>
-        <a href="dessins.html">
+               Le pli de la mémoire - Projet Plastique</a>
+          <a href="dessins.html">
              <img src="images/dessins_expe/redimension/dessins_photonbcrayons_vignette.jpg" alt="dessin-sur-photo">
-             Dessins, Éxperimentations et Collages
-        </a>
-        <!-- <a href="serigraphie-holistique.html">
+               Dessins, Éxperimentations et Collages</a>
+        <a href="serigraphie-holistique.html">
           <img src="images/rostudio/redimension/rostudio_serigraphie_recto_vignette.jpg" alt="depliant-serigraphie-rostudio">
           Fabrication et sérigraphie d'encres naturelles
-          </a> -->
+          </a>
         <!-- <a href="programmation-p5js.html">
              <iframe src="images/p5js/redimension/p5js_blob_vignette/index.html" width="475" height="356" style="border:0px" alt="p5js-blob"> </iframe>
              Expérimentations - Programmation JavaScript
