--- a/cnam.html
+++ b/cnam.html
@@ -20,7 +20,7 @@
     <div class="page-projets">
         <div class="texte-projets">
             <div class="titre-projet"> Le grand bi - Musée des Arts et Métiers</div>
-            <div class="explication-projet"> Conception d'une fiche didactique pour le Musée des Arts et Métiers. <br><br>→ Rendre compte de l'aspect comique de l'objet avec des jeux d'échelle tout en soulignant graphiquement son l'élégance formelle.</div>
+            <div class="explication-projet"> Conception d'une fiche didactique pour le Musée des Arts et Métiers. <br><br>→ Rendre compte de l'aspect comique de l'objet avec des jeux d'échelle tout en soulignant graphiquement son l'élégance formelle.<br><br> Ce projet a été l'occasion de rencontrer deux chercheurs du Cnam en vue d'une potentielle diffusion de la fiche dans le Musée.</div>
         </div>
  
         <div class="page-projets-img">
