--- a/a-propos.html
+++ b/a-propos.html
@@ -31,7 +31,7 @@
                 → Depuis 2021 : <br>DNMADE Graphisme - Image de communication - ELMAD Auguste Renoir - Paris 18e
                 </div>
                 <div class="a-propos-texte">
-                → 2021 : <br>Baccalauréat STD2A - Mention Bien - Institut Sainte Geneviève Paris 6e
+                → 2021 : <br>Baccalauréat STD2A - Mention Bien - Institut Sainte Geneviève - Paris 6e
                 </div>
             </div>
 
@@ -56,6 +56,9 @@
                 </div>
                 <div class="a-propos-texte">
                     → Mai 2022 : <br>Workshop typographie animée avec Hugo Jourdan 
+                </div>
+                <div class="a-propos-texte">
+                    → Juin 2019 : <br>Atelier Germain - Stage en architecture d'intérieur 
                 </div>
             </div>
 
