--- a/basset-hound.html
+++ b/basset-hound.html
@@ -20,7 +20,7 @@
     <div class="page-projets">
         <div class="texte-projets">
             <div class="titre-projet"> Basset Hound Typeface</div>
-            <div class="explication-projet"> Conception d'un alphabet inspiré des 4 lettres d'un logo de la marque Kodak datant de 1964.<br><br>→ Le specimen s'inspire de l'univers de la photographie argentique. Le nom de la typographie vient du pangramme "The quick brown fox jumps over the lazy dog", le Basset Hound étant une race de chien à la mine nonchalante, et accessoirement celle du chien du mon professeur de typographie.</div>
+            <div class="explication-projet"> Conception d'un alphabet inspiré des 4 lettres d'un logo de la marque Kodak datant de 1964.<br><br>→ Le spécimen souligne la finesse du dessin de la lettre par contraste avec la physionomie du Basset Hound, légendaire «lazy dog»</div>
         </div>
  
         <div class="page-projets-img">
