--- a/cnam.html
+++ b/cnam.html
@@ -20,7 +20,8 @@
     <div class="page-projets">
         <div class="texte-projets">
             <div class="titre-projet"> Le grand bi - Musée des Arts et Métiers</div>
-            <div class="explication-projet"> Conception d'une fiche didactique pour le Musée des Arts et Métiers. <br><br>→ Rendre compte de l'aspect comique de l'objet avec des jeux d'échelle tout en soulignant graphiquement son l'élégance formelle.<br><br> Ce projet a été l'occasion de rencontrer deux chercheurs du Cnam en vue d'une potentielle diffusion de la fiche dans le Musée.</div>
+            <div class="explication-projet"> Conception d'une fiche didactique pour le Musée des Arts et Métiers. <br><br>→ L’univers graphique basé sur le noir et blanc, la police IBM plex Serif, la composition rigoureuse selon la grille orthonormée rendent compte de l’élégance formelle du grand Bi. Au contraire, les jeux d’échelles et le traitement de l’iconographie participent à la tonalité comique de cette fiche qui se veut accessible à tous les publics.<br><br> La notion de mouvement était très forte dans la fiche didactique, j’ai souhaité pousser ce projet en animant ce format imprimé sur After Effects. Je me suis initiée à ce logiciel au cours d’un workshop avec Melody da Fonseca.</div>
+            <div class="explication-projet"><a href="https://youtu.be/iUcrfLUCp5o?si=ukkxrf8N6DgP7UCW"> Pour consulter l'animation didactique, cliquez ici. </a></div>
         </div>
  
         <div class="page-projets-img">
