--- a/a-propos.html
+++ b/a-propos.html
@@ -19,7 +19,7 @@
     <div class="a-propos">
             <div>
             <div class="a-propos-texte">
-            Je suis étudiante en DNMADE Graphisme - Image de Communication à l'ELMAD Auguste Renoir Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e. <br> Je recherche un stage étudiant de 2 à 3 mois entre le 9 mai et le 26 juillet 2023.</div>
+            Je suis étudiante en DNMADE Graphisme - Image de Communication à l'ELMAD Auguste Renoir à Paris 18e.</div>
             <div class="a-propos-texte-titre">
             → Si mes projets vous intéressent, vous pouvez me contacter via mon mail : garance.anglio@orange.fr</div>
             </div>
@@ -38,6 +38,12 @@
             <div>
                 <div class="a-propos-texte-titre">
                 Mes expériences</div>
+                <div class="a-propos-texte">
+                    → Juin/Juillet 2023 : <br>Stage chez MilK Magazine auprès du DA Karel Balas. Participation à l’élaboration de 3 publications, création de supports externes et retouche photo
+                </div>
+                 <div class="a-propos-texte">
+                        → Avril 2023 : <br>Workshop en peinture en lettres avec Hélène Marian.
+                </div>
                 <div class="a-propos-texte">
                 → Janvier 2023 : <br>Workshop motion design sur After Effects avec Melody DaFonseca 
                 </div>
@@ -58,7 +64,7 @@
                     → Mai 2022 : <br>Workshop typographie animée avec Hugo Jourdan 
                 </div>
                 <div class="a-propos-texte">
-                    → Juin 2019 : <br>Atelier Germain - Stage en architecture d'intérieur 
+                   → Juin 2019 : <br>Atelier Germain - Stage en architecture d'intérieur 
                 </div>
             </div>
 
@@ -66,7 +72,7 @@
                 <div class="a-propos-texte-titre">
                 Mes compétences</div>
                 <div class="a-propos-texte">
-                → Logiciels : <br>Suite Adobe : Indesign Photoshop Illustrator (Bonne maîtrise) <br> Programmation : HTML & CSS, After Effects, Premiere Pro et Glyphs (En apprentissage)
+                → Logiciels : <br>Suite Adobe (Indesign Photoshop Illustrator,  After Effects, Premiere Pro) et Glyphs
                 </div>
                 
                 <div class="a-propos-texte">
@@ -85,7 +91,7 @@
                 <div class="a-propos-texte-titre">
                 Mes centres d'intérêt</div>
                 <div class="a-propos-texte">
-                → Photographie argentique <br> → Mode et couture <br> → Musique <br> → Expositions
+                → Bénévolat (Solidarité Sida et Présidence du BDE de mon école) <br> → Mode et couture <br> → Lecture (Ma dernière lecture :Incendies de Wajdi Mouawad) <br> → Théâtre (Ma dernière pièce : Bérénice mise en scène par Romeo Castellucci)
                 
                 </div>
             </div>
