--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
          <a href="contact.html">Contact</a>
      </header>
      <div class="page-contact">
-            <div class="paragraphe-grand">Pour me prendre en stage et/ou écouter du Céline Dion ensemble :) <br>→&nbsp;garance.anglio@orange.fr</div>
+            <div class="paragraphe-grand"> Si mes projets vous intéressent et/ou si voulez juste écouter du Céline Dion ensemble :) <br>→&nbsp;garance.anglio@orange.fr</div>
     </div>
     <footer>
          <div class="footer">
-            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon staaaaaaaage dans les froids dans les flaaaaammes. &#124; Je voudrais décrocher la luuuune, je voudrais même sauver la Teeeerre, mais avant tout, je voudrais trouver un staaaage. &#124; Encore un staaaaage, encore une heure, encore une laaaarme de bonheur...</marquee></div>
+            <div class="footer-text"> <marquee Scrollamount=10>J'irai chercher mon masteeeeeeer dans les froids dans les flaaaaammes. &#124; Je voudrais décrocher la luuuune, je voudrais même sauver la Teeeerre, mais avant tout, je voudrais trouver un masteeeeeeer. &#124; Encore un maaaaaaster, encore une heure, encore une laaaarme de bonheur...</marquee></div>
          </div>
     </footer>
 </body>
