--- a/materiautheque.html
+++ b/materiautheque.html
@@ -19,12 +19,13 @@
 
     <div class="page-projets">
         <div class="texte-projets">
-            <div class="titre-projet"> Calligraphie</div>
-            <div class="explication-projet"> Suite à un stage auprès de Serge Cortesi, j’ai développé un pratique régulière de la calligraphie. Cette pratique me permet de mieux comprendre la structure des lettres et d’envisager le texte comme un dessin.</div>
+            <div class="titre-projet"> La grande Matériathèque des Gobelins</div>
+            <div class="explication-projet"> Conception graphique en collaboration avec les étudiants en design d’espace de l’ENSAAMA</div>
+            <div class="explication-projet"> → Avec la police Kazimir, la lettre est envisagé comme une structure modulaire renfermant le trésor patrimonial du lieu. Mon intervention sur ses empattements, pour la moderniser et évoquer l’innovation du projet, m’a été inspirée par la police History de Peter Bil’ak.</div>
         </div>
  
         <div class="page-projets-img">
-            <img src="images/calligraphie/calligraphie_planches.jpg" alt="calligraphie-planches">
+            <img src="images/materiautheque/materiautheque_planche.jpg" alt="calligraphie-planches">
         </div>
       </div>
       </body>
