--- a/insectes-a-table.html
+++ b/insectes-a-table.html
@@ -22,7 +22,7 @@
             <div class="titre-projet">Insectes à table !</div>
             <div class="explication-projet"> Conception de l’identité d’une marque fictive proposant des produits à base insectes comestibles.</div>
             <div class="explication-projet">→ Créer l’envie sans dégoûter les clients réticents en utilisant une mascotte pour évoquer l’insecte consommé. Le ton adopté est chaleureux, « à table » évoque des moments de convivialité mais également une ruée vers le repas.</div>
-            <div class="explication-projet"><a href="https://youtu.be/CimBW1815uo"> Lien vers une animation promotionelle réalisée sur After Effects </a></div>
+            <div class="explication-projet"><a href="https://youtu.be/8erXfRHMouE?si=HwY26txLKmEj_Biy"> Lien vers une animation promotionelle réalisée sur After Effects </a></div>
         </div>
  
         <div class="page-projets-img">
