--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                Délicats insectes — Édition</a>
           <a href="cnam.html">
                     <img src="images/cnam/redimension/vignette_cnam.jpg" alt="cnam-vignette">
-                    Le grand Bi — Didactique et Motion design</a>
+               Le grand Bi — Didactique et Motion design</a>
           <a href="materiautheque.html">
                     <img src="images/materiautheque/matériautheque_vignette.jpg" alt="gobelins-vignette">
-                    Matériauthèque des Gobelins — Identité</a>
-          <a href="chloredecone-serigraphie.html">
-                     <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
-                     Aux trames aux citoyens — Édition </a>
+               Matériauthèque des Gobelins — Identité</a>
           <a href="photographies.html">
                     <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
                Photographies</a>
+          <a href="tous-au-mam.html">
+                    <img src="images/mam/redimensions/vignette_mam.jpg" alt="dépliant-sérigraphie">
+                Tous au MAM ! — Design de Message </a>
            <a href="basset-hound.html">
                     <img src="images/basset_hound/redimension/vignette_bassethound.jpg" alt="basset-hound-vignette">
                Lazy Dog — Typographie</a>
           <a href="calligraphie.html">
                     <img src="images/calligraphie/calligraphie_vignette.jpg" alt="calligraphie-vignette">
                Calligraphie</a>
-          <a href="insectes-a-table.html">
-                    <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes-a-table-mockup-farine">
-                      Insectes à table ! — Identité</a>
+          <a href="chloredecone-serigraphie.html">
+                    <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
+               Aux trames aux citoyens — Édition </a>
           <a href="dessin-typo.html">
                     <img src="images/dessin typo/dessintypo-vignette.jpg" alt="basset-hound-vignette">
                Dessins et croquis typographiques</a>
@@ -70,6 +70,10 @@
           <a href="programmation-p5js.html">
              <iframe src="images/p5js/redimension/p5js_blob_vignette/index.html" width="475" height="356" style="border:0px" alt="p5js-blob"> </iframe>
              Expérimentations - Programmation JavaScript
+
+          <a href="insectes-a-table.html">
+                    <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes-a-table-mockup-farine">
+                      Insectes à table ! — Identité</a>
         </a> -->
     </div>
 </body>
