--- a/a-propos.html
+++ b/a-propos.html
@@ -42,7 +42,7 @@
                 <div class="a-propos-texte-titre">
                 Mes expériences :</div>
                 <div class="a-propos-texte">
-                    → Juin/Juillet 2023 : <br>Stage chez MilK Magazine auprès du DA Karel Balas. Participation à l’élaboration de 3 publications, création de supports externes et retouche photo
+                    → Juin/Juillet 2023 : <br>Assistante Design Graphique chez MilK Magazine — Stage auprès du DA Karel Balas. Participation à l’élaboration de 3 publications, création de visuels, mise en page, retouche photo.<br> Mise en page du catalogue Mode Enfants Septembre 2023 du Bon Marché Rive Gauche.
                 </div>
                 <div class="a-propos-texte">
                     → Juin 2022 : <br>Agence Les Belles Causes -  Stage d’observation
