--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
           <a href="tous-au-mam.html">
                     <img src="images/mam/redimensions/vignette_mam.jpg" alt="dépliant-sérigraphie">
                 Tous au MAM ! — Design de Message </a>
-           <a href="basset-hound.html">
-                    <img src="images/basset_hound/redimension/vignette_bassethound.jpg" alt="basset-hound-vignette">
-               Lazy Dog — Typographie</a>
-          <a href="calligraphie.html">
-                    <img src="images/calligraphie/calligraphie_vignette.jpg" alt="calligraphie-vignette">
-               Calligraphie</a>
+                <a href="milk-magazine.html">
+                    <img src="images/milk/milk_vignette1010.jpg" alt="basset-hound-vignette">
+               MilK Magazine</a>
+          <a href="dessin-typo-calligraphie.html">
+                    <img src="images/dessin typo calli/dessintypocalli_vignette.jpg" alt="calligraphie-vignette">
+               Dessins typographiques et calligraphie</a>
           <a href="chloredecone-serigraphie.html">
                     <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
                Aux trames aux citoyens — Édition </a>
-          <a href="dessin-typo.html">
-                    <img src="images/dessin typo/dessintypo-vignette.jpg" alt="basset-hound-vignette">
-               Dessins et croquis typographiques</a>
+          <a href="basset-hound.html">
+                    <img src="images/basset_hound/redimension/vignette_bassethound.jpg" alt="basset-hound-vignette">
+                    Lazy Dog — Typographie</a>
         <!--
                     <a href="la-villette.html">
                     <img src="images/lavillette/redimension/lavillette_mockup_affiche_vignette_v2.jpg" alt="lavillette-affiche-vignette">
@@ -74,6 +74,9 @@
           <a href="insectes-a-table.html">
                     <img src="images/insectes_a_table/redimension/insectesatable_farinev2_vignette.jpg" alt="insectes-a-table-mockup-farine">
                       Insectes à table ! — Identité</a>
+                                <a href="calligraphie.html">
+                    <img src="images/calligraphie/calligraphie_vignette.jpg" alt="calligraphie-vignette">
+               Calligraphie</a>
         </a> -->
     </div>
 </body>
