--- a/tous-au-mam.html
+++ b/tous-au-mam.html
@@ -26,7 +26,7 @@
  
         <div class="slider-container">
             <div id="slider">
-                <img src="images/mam/mam-1.jpg" alt="Affiches Musée Art Moderne" id="slide">
+                <img src="images/mam/mam-1.webp" alt="Affiches Musée Art Moderne" id="slide">
                 <div id="precedent" onclick="ChangeSlide(-1)"><img src="images/arrows/arrow-left.png" alt="flèche gauche"></div>
                 <div id="suivant" onclick="ChangeSlide(1)"><img src="images/arrows/arrow-right.png" alt="flèche droite"></div>
             </div>
