--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Étudiante en design graphique à Paris.">
+    <meta name="description" content="Graphic design student at École Estienne.">
     <link rel="icon" type="image/png" href="images/cursor/cursor-pink-v2.png">
     <title>Garance Anglio</title>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
@@ -25,7 +25,7 @@
                     <img src="images/cnam/redimension/vignette_cnam.jpg" alt="cnam-vignette">
                Le grand Bi — Edition and Motion design</a>
           <a href="materiautheque.html">
-                    <img src="images/materiautheque/matériautheque_vignette.jpg" alt="gobelins-vignette">
+                    <img src="images/materiautheque/matériautheque_vignette.jpg" alt="gobelins-vignette">
                The Great Material Library — Identity</a>
           <a href="photographies.html">
                     <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
@@ -64,7 +64,7 @@
           <img src="images/apha_conseil/redimension/aphaconseil_formation_mockup_vignette.jpg" alt="aphaconeil-a4-formation">
                APHA Conseil — Identité</a>
                     <a href="paris-dechets.html">
-               <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
+               <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
                Paris Déchets — Message</a>
 
           <a href="programmation-p5js.html">
