--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">x
     <link rel="icon" type="image/png" href="images/cursor/cursor-pink-v2.png">
     <title>À propos</title>
     <link rel="stylesheet" href="https://use.typekit.net/bep7zyd.css">
@@ -54,11 +54,11 @@
                     </div>
 
                     <div class="a-propos-texte">
-                            → Softwares : <br>Adobe Suite (Indesign,Photoshop, Illustrator, After Effects, Premiere Pro), Glyphs, Visual Studio Code (HTML, CSS), Blender
+                            → Software : <br>Adobe Suite (Indesign,Photoshop, Illustrator, After Effects, Premiere Pro), Glyphs, Visual Studio Code (HTML, CSS), Blender
                     </div>
 
                     <div class="a-propos-texte">
-                            → Fiedls : <br> Visual Identity, Branding, Edition, Advertising, Typography, Motion Design, Photography, Calligraphy, Riso printing, Screen printing, Illustration, Film Making, Print, Web, 3D
+                            → Fields : <br> Visual Identity, Branding, Edition, Advertising, Typography, Motion Design, Photography, Calligraphy, Riso printing, Screen printing, Illustration, Film Making, Print, Web, 3D
                     </div>
 
                     <div class="a-propos-texte">
@@ -74,7 +74,7 @@
                 <div class="a-propos-bloc-container-petit">
                     <div class="a-propos-bloc">
                         <div class="a-propos-texte-titre">
-                        Experiences :
+                        Experience :
                          </div>
 
                         <div class="a-propos-texte">
@@ -99,7 +99,7 @@
                         </div>
 
                         <div class="a-propos-texte">
-                            → Volunteering : Solidarité Sida Association (weekly social support, Solidays Music Festival, fundraising) / Student Body President at École Auguste Renoir<br> → Fashion and Sewing <br> → Literrature and Theatre <br> → Hiking
+                            → Volunteering : Solidarité Sida Association (weekly social support, Solidays Music Festival, fundraising) / Student Body President at École Auguste Renoir<br> → Fashion and Sewing <br> → Literature and Theater <br> → Hiking
                         </div>
                     </div>
                 </div>
