--- a/dessin-typo-calligraphie.html
+++ b/dessin-typo-calligraphie.html
@@ -21,7 +21,7 @@
     <div class="page-projets">
         <div class="texte-projets">
             <div class="titre-projet"> Calligraphy, type sketches</div>
-            <div class="explication-projet"> I am really passionate about calligraphy and drawing, because it makes me developp my observation skills. I can reinvest my calligraphic skills in my design projects when necessary.</div>
+            <div class="explication-projet"> I am really passionate about calligraphy and drawing, because it makes me develop my observation skills. I can reinvest my calligraphic skills in my design projects when necessary.</div>
         </div>
  
         <div class="slider-container">
