--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       </header>
     <div class="vignettes-home">
           <a href="delicats-insectes.html">
-             <img src="images/insectes/redimensions/insectes_poster_vignette.jpg" alt="insectes_poster">
+             <img src="images/insectes/insectes_poster_vignette.jpg" alt="insectes_poster">
                Delicate Insects — Edition</a>
           <a href="cnam.html">
-                    <img src="images/cnam/redimension/vignette_cnam.jpg" alt="cnam-vignette">
+                    <img src="images/cnam/vignette_cnam.jpg" alt="cnam-vignette">
                Le grand Bi — Edition and Motion design</a>
           <a href="materiautheque.html">
-                    <img src="images/materiautheque/matériautheque_vignette.jpg" alt="gobelins-vignette">
+                    <img src="images/materiautheque/materiautheque_vignette.jpg" alt="gobelins-vignette">
                The Great Material Library — Identity</a>
           <a href="photographies.html">
-                    <img src="images/photo/redimension/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
+                    <img src="images/photo/photo_texture_2_vignette.jpg" alt="photo-texture-mer">
                Photography</a>
           <a href="dessin-typo-calligraphie.html">
                     <img src="images/dessin typo calli/dessintypocalli_vignette.jpg" alt="calligraphie-vignette">
@@ -37,13 +37,13 @@
                     <img src="images/milk/milk_vignette1010.jpg" alt="basset-hound-vignette">
                MilK Magazine</a>
           <a href="tous-au-mam.html">
-                    <img src="images/mam/redimensions/vignette_mam.jpg" alt="dépliant-sérigraphie">
+                    <img src="images/mam/vignette_mam.jpg" alt="dépliant-sérigraphie">
                Everybody goes to the Museum ! — Advertising </a>
           <a href="basset-hound.html">
-                    <img src="images/basset_hound/redimension/vignette_bassethound.jpg" alt="basset-hound-vignette">
+                    <img src="images/basset_hound/vignette_bassethound.jpg" alt="basset-hound-vignette">
                Lazy Dog — Type Design</a>
           <a href="chloredecone-serigraphie.html">
-                    <img src="images/serigraphie_trame/redimension/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
+                    <img src="images/serigraphie_trame/vignette_serigraphie.jpg" alt="dépliant-sérigraphie">
                Chlordecone — Edition </a>
         <!--
                     <a href="la-villette.html">
@@ -64,7 +64,7 @@
           <img src="images/apha_conseil/redimension/aphaconseil_formation_mockup_vignette.jpg" alt="aphaconeil-a4-formation">
                APHA Conseil — Identité</a>
                     <a href="paris-dechets.html">
-               <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
+               <img src="images/parisdechets/redimension/parisdéchets_affiche1_vignetteV2.jpg" alt="paris-dechets-affiche">
                Paris Déchets — Message</a>
 
           <a href="programmation-p5js.html">
